# citation-hop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TESTING.md  __init__.py  __main__.py  app.py  clipboard.py  config.py  detector.py  engines.py  main.py  platform_utils.py  pyproject.toml  requirements.txt  resolver.py  start_citation_hop.sh  tray.py
.github/workflows/: test.yml
scripts/: restart.sh  smoke_test.py  windows_setup.ps1
src/citation_hop/: __init__.py  __main__.py  clipboard.py  config.py  detector.py  extractor.py  main.py  parser.py  platform_utils.py  resolver.py  tray.py
tests/: __init__.py  conftest.py  test_clipboard.py  test_config.py  test_detector.py  test_engines.py  test_extractor.py  test_lookup.py  test_platform_utils.py  test_resolver.py  test_tray.py
